Afrega el header a index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="main.js" type="module"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Data Lovers</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+      <img class="header-img" src="/src/data/Text-principal.png" alt="Harry Potter">
+      <div>
+      <nav class="header-menu">
+        <a class="header-menu" href="#" style="color:white;">Libros</a>
+        <a class="header-menu" href="#" style="color:white;">Hechisos</a>
+        <a class="header-menu" href="#" style="color:white;">Pociones</a>
+        <a class="header-menu" href="#" style="color:white;">Casa de estudio</a>
+        <a class="header-menu" href="#" style="color:white;">Datos curiosos</a>
+      </nav>
+      <p class="header-buscador">
+        <input type="search" name="buscar" placeholder="buscar...">
+        <input type="submit" value="Buscar">
+      </p>
+      <img id= imgPrincipal src="./data/fotoPrincipal.png" />
+    </div>
+
+
+  </header>
+  <div id="root"></div>
+  <script src="main.js" type="module"></script>
+</body>
+
 </html>
