--- a/src/index.html
+++ b/src/index.html
@@ -2,30 +2,32 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>Data Lovers</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <header>
-      <img class="header-img" src="/src/data/Text-principal.png" alt="Harry Potter">
-      <div>
-      <nav class="header-menu">
-        <a class="header-menu" href="#" style="color:white;">Libros</a>
-        <a class="header-menu" href="#" style="color:white;">Hechisos</a>
-        <a class="header-menu" href="#" style="color:white;">Pociones</a>
-        <a class="header-menu" href="#" style="color:white;">Casa de estudio</a>
-        <a class="header-menu" href="#" style="color:white;">Datos curiosos</a>
-      </nav>
-      <p class="header-buscador">
-        <input type="search" name="buscar" placeholder="buscar...">
-        <input type="submit" value="Buscar">
-      </p>
-      <img id= imgPrincipal src="./data/fotoPrincipal.png" />
-    </div>
-
-
+    <img class="header-img" src="./img/hearderharrypotter.png" alt="Harry Potter" />
+    <nav>
+      <a class="header-menu" id="books" href="#">LIBROS</a>
+      <a class="header-menu" id="spells" href="#">HECHIZOS</a>
+      <a class="header-menu" id="potions" href="#">POCIONES</a>
+      <a class="header-menu" id="funfacts" href="#">DATOS CURIOSOS</a>
+      <a class="header-menu" id="study-house" href="#">CASAS DE ESTUDIO</a>
+    </nav>
+    <p class="header-buscador">
+      <input type="search" name="buscar" placeholder="buscar..." />
+      <input type="submit" value="Buscar" />
+    </p>
+    <img id="imgPrincipal" src="./img/fotoPrincipal.png" />
+  </header>
+  <button class="btn-filrar">Filtar</button>
+  <button class="btn-ordenar">Ordenar</button>
+  <h2>Personajes</h2>
+  <section id="temp-characters">
+  </section>
   </header>
   <div id="root"></div>
   <script src="main.js" type="module"></script>
