--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Data Lovers</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Data Lovers</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
+  <body>
+    <header>
+      <img id="imgPrincipal" src="./img/fotoPrincipal.png" />
+      <img
+        class="header-img"
+        src="./img/hearderharrypotter.png"
+        alt="Harry Potter"
+      />
+      <nav>
+        <a class="header-menu" id="books" href="#">LIBROS</a>
+        <a class="header-menu" id="spells" href="#">HECHIZOS</a>
+        <a class="header-menu" id="potions" href="#">POCIONES</a>
+        <a class="header-menu" id="funfacts" href="#">DATOS CURIOSOS</a>
+        <a class="header-menu" id="study-house" href="#">CASAS DE ESTUDIO</a>
+      </nav>
+      <input
+        class="input-buscar"
+        type="search"
+        name="buscar"
+        placeholder="buscar..."
+      />
+      <button class="btn-buscar" value="Buscar">Buscar</button>
+    </header>
+    <section id="temp-characters">
+      <button class="btn-filtrar">Filtrar</button>
+      <button class="btn-ordenar">Ordenar</button>
+      <h2>PERSONAJES</h2>
+    </section>
 
-<body>
-  <header>
-    <img id="imgPrincipal" src="./img/fotoPrincipal.png" />
-    <img class="header-img" src="./img/hearderharrypotter.png" alt="Harry Potter" />
-    <nav>
-      <a class="header-menu" id="books" href="#">LIBROS</a>
-      <a class="header-menu" id="spells" href="#">HECHIZOS</a>
-      <a class="header-menu" id="potions" href="#">POCIONES</a>
-      <a class="header-menu" id="funfacts" href="#">DATOS CURIOSOS</a>
-      <a class="header-menu" id="study-house" href="#">CASAS DE ESTUDIO</a>
-    </nav>
-    <input class="input-buscar" type="search" name="buscar" placeholder="buscar..." />
-    <button class="btn-buscar" value="Buscar">Buscar</button>
-    
-  </header>
-  <section id="temp-characters">
-    <button class="btn-filtrar">Filtrar</button>
-  <button class="btn-ordenar">Ordenar</button>
-  <h2>PERSONAJES</h2>
-  </section>
-  </header>
-  <div id="root"></div>
-  <script src="main.js" type="module"></script>
-</body>
-
+    <div id="root"></div>
+    <script src="main.js" type="module"></script>
+  </body>
 </html>
