agrega la función calcular y corre tres test

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,8 @@
         </select>
       </form>
       <h2 id="titleSection">PERSONAJES</h2>
-      <button id="calc" style="display: none;">¡¡DATO CURIOSO DEL MES!!</button>
+      <button id="calc" style="display: none;">¡DATO CURIOSO DEL MES MARZO 🕵️‍♀️!</button>
+      <p id="respuestaDatoCurioso" style="display: none"></p>
       <section id="temp-characters"></section>
       <section id="bookssection" style="display: none"></section>
       <section id="funFactssection" style="display: none"></section>      
