mejora el coverage de los test, habilita el header para retornar a la pantalla principal

--- a/src/index.html
+++ b/src/index.html
@@ -62,11 +62,14 @@
         </select>
       </form>
       <h2 id="titleSection">PERSONAJES</h2>
-      <button id="calc" style="display: none;">¡DATO CURIOSO DEL MES MARZO 🕵️‍♀️!</button>
-      <p id="respuestaDatoCurioso" style="display: none"></p>
+      <button id="calc" style="display: none">
+        ¡DATO CURIOSO DEL MES MARZO 🕵️‍♀️!
+      </button>
+      <div id="funFactnswer" style="display: none" >        
+      </div>
       <section id="temp-characters"></section>
       <section id="bookssection" style="display: none"></section>
-      <section id="funFactssection" style="display: none"></section>      
+      <section id="funFactssection" style="display: none"></section>
       <div id="root"></div>
     </main>
     <script src="main.js" type="module"></script>
