--- a/src/index.html
+++ b/src/index.html
@@ -1,77 +1,74 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <header>
-      <img id="imgPrincipal" src="./img/fotoPrincipal.png" />
-      <img
-        id="header-img"
-        src="./img/hearderharrypotter.png"
-        alt="Harry Potter"
-      />
-      <nav id="sections">
-        <a href="#" class="header-menu" id="books">LIBROS</a>
-        <a href="#" class="header-menu" id="spells">HECHIZOS</a>
-        <a href="#" class="header-menu" id="potions">POCIONES</a>
-        <a href="#" class="header-menu" id="funfacts">DATOS CURIOSOS</a>
-        <a href="#" class="header-menu" id="study-house">CASAS DE ESTUDIO</a>
-      </nav>
-      <input
-        class="input-buscar"
-        type="search"
-        name="buscar"
-        placeholder="buscar..."
-      />
-    </header>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Data Lovers</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-    <main id="sectionMostrando">
-      <form action="#" id="btns">
-        <select class="btn-filtrar" id="btn">
-          <option class="btn-filtrar-element" value="character">FILTRAR</option>
-          <option class="btn-filtrar-element" id="muggle" value="Muggle">
-            Muggle
-          </option>
-          <option class="btn-filtrar-element" id="humanos" value="Human">
-            Humanos
-          </option>
-          <option
-            class="btn-filtrar-element"
-            id="personajeFemenino"
-            value="Female"
-          >
-            Personajes femeninos
-          </option>
-          <option
-            class="btn-filtrar-element"
-            id="personajeMasculino"
-            value="Male"
-          >
-            Personajes masculinos
-          </option>
-        </select>
-        <select class="btn-ordenar">
-          <option value="ordenar">ORDENAR</option>
-          <option value="A-Z" id="A-Z">A-Z</option>
-          <option value="Z-A" id="Z-A">Z-A</option>
-        </select>
-      </form>
-      <h2 id="titleSection">PERSONAJES</h2>
-      <button id="calc" style="display: none">
-        ¡DATO CURIOSO DEL MES MARZO 🕵️‍♀️!
-      </button>
-      <div id="funFactnswer" style="display: none" >        
-      </div>
-      <section id="temp-characters"></section>
-      <section id="bookssection" style="display: none"></section>
-      <section id="funFactssection" style="display: none"></section>
-      <div id="root"></div>
-    </main>
-    <script src="main.js" type="module"></script>
-  </body>
+<body>
+  <header>
+    <img id="imgPrincipal" src="./img/fotoPrincipal.png" />
+    <img id="header-img" src="./img/hearderharrypotter.png" alt="Harry Potter" />
+    <nav id="sections">
+      <a href="#" class="header-menu" id="books">BOOKS</a>
+      <a href="#" class="header-menu" id="spells">SPELLS</a>
+      <a href="#" class="header-menu" id="potions">POTIONS</a>
+      <a href="#" class="header-menu" id="funfacts">FUN FACTS</a>
+    </nav>
+  </header>
+
+  <main id="sectionMostrando">
+    <form action="#" id="btns">
+      <select class="btn-filtrar" id="btn">
+        <option class="btn-filtrar-element" value="character">FILTER BY</option>
+        <option class="btn-filtrar-element" id="muggle" value="Muggle">
+          Muggle
+        </option>
+        <option class="btn-filtrar-element" id="houseGryffindor" value="Gryffindor">
+          House Gryffindor
+        </option>
+        <option class="btn-filtrar-element" id="houseRavenclaw" value="Ravenclaw">
+          House Ravenclaw
+        </option>
+        <option class="btn-filtrar-element" id="houseSlytherin" value="Slytherin"> House Slytherin
+        </option>
+        <option class="btn-filtrar-element" id="houseHafflepuff" value="Hufflepuff"> House Hufflepuff
+        </option>
+      </select>
+      <select class="btn-ordenar">
+        <option value="ordenar">SORT BY</option>
+        <option value="A-Z" id="A-Z">Ascending</option>
+        <option value="Z-A" id="Z-A">Descending</option>
+      </select>
+    </form>
+    <h2 id="titleSection">CHARACTERS</h2>
+    <button id="calc" style="display: none">
+      ¡FUN FACT OF THE MONTH OF MARCH 🕵️‍♀️!
+    </button>
+    <div id="funFactnswer" style="display: none">
+    </div>
+    <section id="temp-characters"></section>
+    <section id="bookssection" style="display: none"></section>
+    <section id="funFactssection" style="display: none"></section>
+    <select id="potionsBtnOrdenar" style="display: none">
+      <option value="ordenar">SORT BY</option>
+      <option value="A-Z" >Ascending</option>
+      <option value="Z-A" >Descending</option>
+    </select>
+    <section id="potionsSection" style="display: none"></section>
+    <select id="spellsBtnOrdenar" style="display: none">
+      <option value="ordenar">SORT BY</option>
+      <option value="A-Z">Ascending</option>
+      <option value="Z-A" >Descending</option>
+    </select>
+    <section id="spellsSection" style="display: none"></section>
+
+    <div id="root"></div>
+  </main>
+  <script src="main.js" type="module"></script>
+</body>
+
 </html>
