cambia a ingles botones de navegación

--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,11 @@
       <nav id="sections">
         <button id="close"><i class="bi bi-x-lg"></i></button>
         <ul class="nav-list">
-          <li><a href="#" class="header-menu" id="books">LIBROS</a></li>
-          <li><a href="#" class="header-menu" id="spells">HECHIZOS</a></li>
-          <li><a href="#" class="header-menu" id="potions">POCIONES</a></li>
+          <li><a href="#" class="header-menu" id="books">BOOKS</a></li>
+          <li><a href="#" class="header-menu" id="spells">SPELLS</a></li>
+          <li><a href="#" class="header-menu" id="potions">POTIONS</a></li>
           <li>
-            <a href="#" class="header-menu" id="funfacts">DATOS CURIOSOS</a>
+            <a href="#" class="header-menu" id="funfacts">FUN FACTS</a>
           </li>
         </ul>
       </nav>
